2011-08-07  Stefano Lattarini  <stefano.lattarini@gmail.com>

	testsuite: fix weird spurious failure with Solaris /bin/sh
	Solaris /bin/sh, when killed with a SIGTERM or SIGINT signal, can
	apparently end up exiting with exit status 208, instead of leaving
	the correct wide exit status to the parent.  See:
	 <http://dbaspot.com/shell/396118-bourne-shell-exit-code-term.html>
	Work around this incompatibility.
	* tap-signal.test: Look for the above Solaris bug.
	(signal_caught): Adapt to handle it.

2011-08-07  Stefano Lattarini  <stefano.lattarini@gmail.com>

	testsuite: fix another spurious failure on Solaris make
	* tests/parallel-tests-log-override-recheck.test: Filter make
	output before grepping it, for make implementations that, like
	Solaris' one, print the whole of the failed recipe on failure.

2011-08-07  Stefano Lattarini  <stefano.lattarini@gmail.com>

	testsuite: fix two spurious failures on Solaris make
	* tests/tests-environment-and-log-compiler.test: Do not fail if
	"make -n check" fails, as that is issued only for debugging, its
	semantics being tested in other test scripts.
	* tests/test-driver-strip-vpath.test: Likewise.

2011-08-07  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tap driver: refactor and remove dead code
	* lib/tap-driver (get_tap_line): Removed, ...
	(all callers): ... updated to use $parser->next directly instead.
	(peek_tap_line, unget_tap_line, @tap_lines): Remove, they're not
	used anymore.
	(TAP_PEEKING): Block deleted, all its subroutines and variables
	having been removed.

2011-08-07  Stefano Lattarini  <stefano.lattarini@gmail.com>

	testsuite: fix spurious failure in a test on TAP support
	* tests/tap-passthrough-exit.test: When the `--ignore-exit' flag
	of the TAP driver is used, don't look for a message reporting the
	non-zero exit statuses of tests in the log files; such message is
	not expected to be there anymore.  Related simplifications.

2011-08-07  Stefano Lattarini  <stefano.lattarini@gmail.com>
