@@ -294,6 +294,9 @@ check-TESTS:
 	list=`for f in $$list; do					\
 	  test .log = $$f || echo $$f;					\
 	done | tr '\012\015' '  '`;					\
+## This apparently useless munging helps to avoid a nasty bug (a
+## segmentation fault!) on Solaris XPG4 make.
+	list=`echo "$$list" | sed 's/ *$$//'`;				\
 	$(MAKE) $(AM_MAKEFLAGS) $(TEST_SUITE_LOG) TEST_LOGS="$$list"
 
 AM_RECURSIVE_TARGETS += check
