@@ -1,5 +1,14 @@
 2011-08-07  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	parallel-tests: work around Solaris XPG4 make segfault
+	Issue exposed by test `posixsubst-tests-p.test', and similar to
+	the problem solved by commit `v1.11-159-ge7aa360'.
+	* lib/am/check.am [%?PARALLEL_TESTS%] (check-TESTS): Trim trailing
+	whitespace from $list, to avoid triggering a nasty bug (potential
+	segfault) on Solaris XPG4 make and Heirloom make.
+
+2011-08-07  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	testsuite: fix weird spurious failure with Solaris /bin/sh
 	Solaris /bin/sh, when killed with a SIGTERM or SIGINT signal, can
 	apparently end up exiting with exit status 208, instead of leaving
